--- a/Content/breakoutpth.html
+++ b/Content/breakoutpth.html
@@ -137,15 +137,15 @@
      <ul>
     <li>Level 1</li>
     <p>5 Lives Normal Speed Big Ball</p>
-    <form method="get" action="file:phaser0.html"><button type="submit">Breakout</button></form>
+    <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/phaser0.html'" />  </form>
     <p></p>
     <li>Level 2</li>
     <p>3 Lives Normal Speed</p>
-    <form method="get" action="file:phaser1.html"><button type="submit">Breakout</button></form>
+    <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/phaser1.html'" />  </form>
     <p></p>
     <li>Level 3</li>
     <p>1 Life </p>
-    <form method="get" action="file:phaser2.html"><button type="submit">Breakout</button></form>
+    <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/phaser2.html'" />  </form>
     <p></p>
     </ul>
 </body>
