--- a/Content/numpth.html
+++ b/Content/numpth.html
@@ -2,9 +2,12 @@
     <head></head>
   <body>
     
-    <p>0-100 </p> <form method="get" action="file:Numguess.html"><button type="submit">Play</button></form> 
-    <p>Diffuculty Level 2</p>   <form method="get" action="file:pong gamelvl2.html"><button type="submit">Play</button></form> 
-    <p>Diffuculty Level 3 (Extreme)</p>  <form method="get" action="file:pong gamelvl3.html"><button type="submit">Play</button></form> 
+    <p>0-100 </p> <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/Numguess.html'" />  </form>
+    <p>Diffuculty Level 2</p> 
+    <p>Diffuculty Level 3 (Extreme)</p>  
+
+
+    <p>Level 1 and 2 coming soon.</p>
 
 
 
