--- a/Content/pongpth.html
+++ b/Content/pongpth.html
@@ -136,17 +136,17 @@
     <ul>
             <li>Single Player</li>
             
-            <p>Diffuculty Level 1</p> <form method="get" action="file:pong gamelvl1.html"><button type="submit">Play</button></form> 
-            <p>Diffuculty Level 2</p>   <form method="get" action="file:pong gamelvl2.html"><button type="submit">Play</button></form> 
-            <p>Diffuculty Level 3 (Extreme)</p>  <form method="get" action="file:pong gamelvl3.html"><button type="submit">Play</button></form> 
+            <p>Diffuculty Level 1</p> <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/pong gamelvl1.html'" />  </form>
+            <p>Diffuculty Level 2</p>   <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/pong gamelvl2.html'" />  </form>
+            <p>Diffuculty Level 3 (Extreme)</p>  <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/pong gamelvl.html'" />  </form>
 
 
 
             <li>2 Player</li>
-            <form method="get" action="file:Ping-Pong-js-master/game.html"><button type="submit">Play</button></form>
+            <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/Ping-Pong-js-master/game.html'" />  </form>
             <p>Controls- Player 1 uses w to move up and s to move down. Player 2 uses arrow keys to move up and down.</p>
             </ul>
 
-
+            
   </body>
 </html>
