--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
 
 <ul>
   <li>Game1 Snake</li>
-  <form method="get" action="file:Content/SnakeJS.html"><button type="submit">Snake!</button></form>
+  <form> <input type="button" value="Snake!" onclick="window.location.href='https://mythoaway.github.io/Content/SnakeJS.html'" />  </form>
   <li>Game2 Breakout</li>
-  <form method="get" action="file:Content/breakoutpth.html"><button type="submit">Breakout!</button></form>
+  <form> <input type="button" value="Breakout!" onclick="window.location.href='https://mythoaway.github.io/Content/breakoutpth.html'" />  </form>
   <li>Game3 Pong</li>
-  <form method="get" action="file:Content/pongpth.html"><button type="submit">Pong!</button></form>
+  <form> <input type="button" value="Pong!" onclick="window.location.href='https://mythoaway.github.io/Content/pongpth.html'" />  </form>
   <li>Game4 Guess the Number</li>
-  <form method="get" action="file:Content/numpth.html"><button type="submit">Numbers!</button></form>
+  <form> <input type="button" value="Numbers!" onclick="window.location.href='https://mythoaway.github.io/Content/numpth.html'" />  </form>
   </ul>
 
   </style>
@@ -189,8 +189,6 @@
 <a style="text-decoration:none" rel="" href="Content/Popular Links.html" ><h2 class="glow">Popular Links</h2>     </a>
 <p>.</p>
 <a style="text-decoration:none" rel="" href="Content/HoM.html" ><h2 class="glow">Hall of Memes</h2>     </a>
-
-
 
 
 
