--- a/Content/SnakeJS.html
+++ b/Content/SnakeJS.html
@@ -10,7 +10,7 @@
   
   <canvas id="c" width="1000" height="1000" style="height: 500px; width: 500px;"></canvas>
 
-  <script src="SnakeJavaCode.js"></script> <form method="get" action="file:SnakeJSM.html"><button type="submit">Mini Snake</button></form>  <form method="get" action="file:SnakeJSH.html"><button type="submit">BIG Snake</button></form>
+  <script src="SnakeJavaCode.js"></script> <form> <input type="button" value="Small Snake" onclick="window.location.href='https://mythoaway.github.io/Content/SnakeJSM.html'" />  </form>  <form> <input type="button" value="Big Snake" onclick="window.location.href='https://mythoaway.github.io/Content/SnakeJSH.html'" />  </form>
 
 </body>
 </html>
