--- a/Content/Emulators.html
+++ b/Content/Emulators.html
@@ -24,13 +24,13 @@
     
     <ul>
         <li>Windows 2000</li>
-        <form method="get" action="file:windows2000.html"><button type="submit">Launch</button></form>
+        <form> <input type="button" value="Launch" onclick="window.location.href='https://mythoaway.github.io/Content/windows2000.html'" />  </form>
         <li>MSDOS</li>
-        <form method="get" action="file:MSDOS.html"><button type="submit">Launch</button></form>
+        <form> <input type="button" value="Launch" onclick="window.location.href='https://mythoaway.github.io/Content/MSDOS.html'" />  </form>
         <li>Linux </li>
-        <form method="get" action="file:Linux.html"><button type="submit">Launch</button></form>
+        <form> <input type="button" value="Launch" onclick="window.location.href='https://mythoaway.github.io/Content/Linux.html'" />  </form>
         <li>Windows, Linux, and MSDOS (Zoom Out)</li>
-        <form method="get" action="file:AllOS.html"><button type="submit">Launch</button></form>
+        <form> <input type="button" value="Launch" onclick="window.location.href='https://mythoaway.github.io/Content/AllOS.html'" />  </form>
         </ul>
 
 
