--- a/Content/MSDOS.html
+++ b/Content/MSDOS.html
@@ -4,7 +4,7 @@
     
 <p><a href="https://bellard.org/jslinux/vm.html?url=https://bellard.org/jslinux/freedos.cfg&mem=64&graphic=1&w=720&h=400" target="iframe_b">MSDOS</a></p>
 
-<p>MSDOD is mainly for coders. No fun factor here. Once loaded type "help" in the console.</p>
+<p>MSDOD is mainly for coders. No fun factor here. Once loaded type "help" in the console. Press MSDOS to begin.</p>
 
 <iframe height="768px" width="1024px" src="demo_iframe.htm" name="iframe_b"></iframe>
   </body>
