--- a/Content/pongpth.html
+++ b/Content/pongpth.html
@@ -138,7 +138,7 @@
             
             <p>Diffuculty Level 1</p> <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/pong gamelvl1.html'" />  </form>
             <p>Diffuculty Level 2</p>   <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/pong gamelvl2.html'" />  </form>
-            <p>Diffuculty Level 3 (Extreme)</p>  <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/pong gamelvl.html'" />  </form>
+            <p>Diffuculty Level 3 (Extreme)</p>  <form> <input type="button" value="Play" onclick="window.location.href='https://mythoaway.github.io/Content/pong gamelvl3.html'" />  </form>
 
 
 
