--- a/Content/AllOS.html
+++ b/Content/AllOS.html
@@ -23,9 +23,9 @@
 
 
 
-<p><a href="https://bellard.org/jslinux/vm.html?url=https://bellard.org/jslinux/win2k.cfg&mem=192&graphic=1&w=1024&h=768" target="iframe_a">Alt F4 :)</a></p>
+<p><a href="https://bellard.org/jslinux/vm.html?url=https://bellard.org/jslinux/win2k.cfg&mem=192&graphic=1&w=1024&h=768" target="iframe_a">Alt F4</a></p>
 
-<p> Runs Windows 2000 in your browser. There is a vpn for it but have not set that up yet. (Play Solitare)</p>
+<p> Runs Windows 2000 in your browser. There is a vpn for it but have not set that up yet. Press Alt F4 to begin. (Play Solitare)</p>
 
 <iframe height="768px" width="1024px" src="demo_iframe.htm" name="iframe_a"></iframe>
 
@@ -33,7 +33,7 @@
 
 <p><a href="https://bellard.org/jslinux/vm.html?url=https://bellard.org/jslinux/freedos.cfg&mem=64&graphic=1&w=720&h=400" target="iframe_b">MSDOS</a></p>
 
-<p>MSDOD is mainly for coders. No fun factor here. Once loaded type "help" in the console.</p>
+<p>MSDOD is mainly for coders. No fun factor here. Once loaded type "help" in the console. Press MSDOS to begin.</p>
 
 <iframe height="768px" width="1024px" src="demo_iframe.htm" name="iframe_b"></iframe>
 
@@ -42,7 +42,7 @@
 
 <p><a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=https://bellard.org/jslinux/fedora29-riscv-xwin.cfg&graphic=1&mem=256" target="iframe_c">Linux</a></p>
 
-<p>Linux takes longer to load. When desktop is loaded left-click twice qickly on trackpad for options. </p>
+<p>Linux takes longer to load. When desktop is loaded left-click twice qickly on trackpad for options. Press Linux to begin. </p>
 
 <iframe height="768px" width="1024px" src="demo_iframe.htm" name="iframe_c"></iframe>
  </body>
