--- a/Content/Linux.html
+++ b/Content/Linux.html
@@ -4,7 +4,7 @@
     
     <p><a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=https://bellard.org/jslinux/fedora29-riscv-xwin.cfg&graphic=1&mem=256" target="iframe_c">Linux</a></p>
 
-    <p>Linux takes longer to load. When desktop is loaded left-click twice qickly on trackpad for options. </p>
+    <p>Linux takes longer to load. When desktop is loaded left-click twice qickly on trackpad for options. Press Linux to begin. </p>
     
     <iframe height="768px" width="1024px" src="demo_iframe.htm" name="iframe_c"></iframe>
 
