--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
+
     <SCRIPT LANGUAGE="JAVASCRIPT">
         
         function lifetimer(){            
@@ -165,6 +166,15 @@
   </head>
    
  
+  <h2>Flash Games</h2>
+
+<p> These are not made or modified by me in any way. All right to respective owners.</p>
+
+<ul>
+  <li>Game1 Twix</li>
+  <form> <input type="button" value="Twix!" onclick="window.location.href='https://mythoaway.github.io/Content/Twix.html'" />  </form>
+  </ul>
+
 
   <a id="prevLink" href='https://www.mathxlforschool.com/login_school.htm?returnurl=%2fStudent%2fDashboard.aspx'></a> 
 <a id="nextLink" href='https://www.mathxlforschool.com/login_school.htm?returnurl=%2fStudent%2fDashboard.aspx'></a>
@@ -189,8 +199,6 @@
 <a style="text-decoration:none" rel="" href="Content/Popular Links.html" ><h2 class="glow">Popular Links</h2>     </a>
 <p>.</p>
 <a style="text-decoration:none" rel="" href="Content/HoM.html" ><h2 class="glow">Hall of Memes</h2>     </a>
-
-
 
 
 </body>
