--- a/Content/AllOS.html
+++ b/Content/AllOS.html
@@ -17,7 +17,7 @@
                   yellow 150px, green 200px, blue 250px,
                   indigo 300px, violet 350px, red 370px);
           }</style>
-    </head>
+   <title>All OS</title> </head>
   <body>
 
 
