--- a/Content/Emulators.html
+++ b/Content/Emulators.html
@@ -16,6 +16,7 @@
               yellow 150px, green 200px, blue 250px,
               indigo 300px, violet 350px, red 370px);
       }</style>
+      <title>Emulators</title>
     </head>
   <body>
     <h3>Welcome To the Emulator Page!</h3>
