--- a/Content/Linux.html
+++ b/Content/Linux.html
@@ -1,5 +1,9 @@
 <html>
-    <head></head>
+    <head>
+      <title>
+        Linux
+      </title>
+    </head>
   <body>
     
     <p><a href="https://bellard.org/jslinux/vm.html?cpu=riscv64&url=https://bellard.org/jslinux/fedora29-riscv-xwin.cfg&graphic=1&mem=256" target="iframe_c">Linux</a></p>
