--- a/Content/MSDOS.html
+++ b/Content/MSDOS.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+      <title>MSDOS</title>
+    </head>
   <body>
     
 <p><a href="https://bellard.org/jslinux/vm.html?url=https://bellard.org/jslinux/freedos.cfg&mem=64&graphic=1&w=720&h=400" target="iframe_b">MSDOS</a></p>
