--- a/Content/breakoutpth.html
+++ b/Content/breakoutpth.html
@@ -129,7 +129,8 @@
             setTimeout('disco()',50)
             }
             //-->
-            </script></head>
+            </script>
+            <title>Breakout</title></head>
 
 <body>
     <p>The game starts once you select the level. Use the mouse or the arrow keys for movement.</p>
