--- a/Content/windows2000.html
+++ b/Content/windows2000.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+      <title>Windows 2000</title>
+    </head>
   <body>
     
     <p><a href="https://bellard.org/jslinux/vm.html?url=https://bellard.org/jslinux/win2k.cfg&mem=192&graphic=1&w=1024&h=768" target="iframe_a">Alt F4</a></p>
