--- a/Content/windows2000.html
+++ b/Content/windows2000.html
@@ -6,7 +6,7 @@
     
     <p><a href="https://bellard.org/jslinux/vm.html?url=https://bellard.org/jslinux/win2k.cfg&mem=192&graphic=1&w=1024&h=768" target="iframe_a">Alt F4</a></p>
 
-    <p> Runs Windows 2000 in your browser. There is a vpn for it but have not set that up yet. Press Alt F4 to begin. (Play Solitare)</p>
+    <p> Runs Windows 2000 in your browser. There is a vpn for it but I have not set that up yet. Press Alt F4 to begin. (Play Solitare)</p>
     
     <iframe height="768px" width="1024px" src="demo_iframe.htm" name="iframe_a"></iframe>
 
