--- a/Content/SnakeJSH.html
+++ b/Content/SnakeJSH.html
@@ -14,7 +14,13 @@
 
   <script src="SnakeJSH.js"></script> 
 
-
+  <script>window.addEventListener("keydown", function(e) {
+    // space and arrow keys
+    if([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) {
+        e.preventDefault();
+    }
+  }, false);</script>
+   
   
 
   </body>
