--- a/index.html
+++ b/index.html
@@ -168,11 +168,13 @@
  
   <h2>Flash Games</h2>
 
-<p> These are not made or modified by me in any way. All right to respective owners.</p>
+<p> These are not made or modified by me in any way. Make sure to check out their orignal websites! All right to respective owners.</p>
 
 <ul>
   <li>Game1 Twix</li>
   <form> <input type="button" value="Twix!" onclick="window.location.href='https://mythoaway.github.io/Content/Twix.html'" />  </form>
+  <li>Game2 Dino Run</li>
+  <form> <input type="button" value="Run!" onclick="window.location.href='https://mythoaway.github.io/Content/DinoRun.html'" />  </form>
   </ul>
 
 
