--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <li>Game1 Twix</li>
   <form> <input type="button" value="Twix!" onclick="window.location.href='https://mythoaway.github.io/Content/Twix.html'" />  </form>
   <li>Game2 Dino Run</li>
-  <form> <input type="button" value="Run!" onclick="window.location.href='https://mythoaway.github.io/Content/DinoRun.html'" />  </form>
+  <form> <input type="button" value="Run!" onclick="window.location.href='https://mythoaway.github.io/Content/Dinorun.html'" />  </form>
   </ul>
 
 
