--- a/Content/SnakeJSM.html
+++ b/Content/SnakeJSM.html
@@ -17,5 +17,14 @@
 
   <script src="SnakeJSM.js"></script>
 
+
+
+
+  <script>window.addEventListener("keydown", function(e) {
+    // space and arrow keys
+    if([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) {
+        e.preventDefault();
+    }
+  }, false);</script>
   </body>
 </html>
