--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en-US">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-
+  <style>
+    .right {
+      float: right;
+         padding: 10px;
+    }
+    </style>
     <SCRIPT LANGUAGE="JAVASCRIPT">
         
         function lifetimer(){            
@@ -103,9 +108,10 @@
 <h4 style="color:rgb(0, 70, 27)">Where all your dreams come true...</h4>
 <h5>Version 1.5</h5>
 
-
-
-
+<div class="right">
+<iframe src="Content/testcode.html" frameBorder="0" width="500" height="400">
+</iframe>
+</div>
 
     <FORM name="live">
     
