Testing Greeting Message

--- a/index.html
+++ b/index.html
@@ -108,10 +108,7 @@
 <h4 style="color:rgb(0, 70, 27)">Where all your dreams come true...</h4>
 <h5>Version 1.5</h5>
 
-<div class="right">
-<iframe src="Content/testcode.html" frameBorder="0" width="500" height="400">
-</iframe>
-</div>
+<iframe src="https://mythoaway.github.io/Content/testcode.html" style="height:200px;width:300px;border:none"></iframe>
 
     <FORM name="live">
     
