--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <h4 style="color:rgb(0, 70, 27)">Where all your dreams come true...</h4>
 <h5>Version 1.5</h5>
 
-<iframe src="https://mythoaway.github.io/Content/testcode.html" style="height:200px;width:300px;border:none"></iframe>
+<iframe src="https://mythoaway.github.io/Content/testcode.html" style="height:420px;width:300px;border:none;float:right"></iframe>
 
     <FORM name="live">
     
