Add a dark room to game list

--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
 <form> <input type="button" value="Snake!"
         onclick="window.location.href='https://mythoaway.github.io/src/games/snake/snake.html'" /> </form>
 
-
+<h2>Linked Games</h2>
+<form> <input type="button" value="A Dark Room"
+    onclick="window.location.href='https://adarkroom.doublespeakgames.com/'" /> </form>
+<p>t e e t h </p>
 
 <h2>Flash Games</h2>
 
